the commit did not go th

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </title>
 </head>
 <body>
-    Hello World
+    <p id="example-of-id" class="example-of-class">
+        Hello World
+    </p>
 </body>
 </html>
